2007-05-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_grow.c (igraph_revolver_p_p, igraph_revolver_st_p_p)
	(igraph_revolver_mes_p_p, igraph_revolver_error_p_p) : added

	* src/revolver_grow.c (igraph_revolver_d_d) : bugs corrected

2007-05-09  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver_cit.c (igraph_evolver_d) : added

	* src/evolver2.c (igraph_revolver_error_d_d) : bugs corrected

	* src/evolver2.c (igraph_revolver_d_d, igraph_revolver_mes_d_d)
	(igraph_revolver_st_d_d, igraph_revolver_error_d_d) : added

2007-05-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* example/simple/igraph_vs_seq : added

	* src/iterators.c (igraph_vs_seq, igraph_vs_seq) : bug corrected, last 
	vertex was omitted

	* src/evolver.R : all evolver_* renamed to revolver_*

	* example/simple/igraph_girth.c : added

	* src/structural_properties.c (igraph_girth) : some speedup

	* src/structural_properties.c (igraph_girth) : a bug corrected

2007-05-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_vertex_connectivity, igraph_edge_connectivity) :
	check that the graph is connected and also minimum degree
	(igraph_cohesion) : added 'checks' argument
	(igraph_adhesion) : added 'checks' argument, calls edge_connectivity now

	* src/structural_properties.c (igraph_girth) : added

2007-04-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/evolver.c (igraph_evolver_air, igraph_evolver_mes_air)
	(igraph_evolver_st_air, igraph_evolver_error_air) : added

	* src/evolver.c (igraph_evolver_ir, igraph_evolver_mes_ir)
	(igraph_evolver_st_ir, igraph_evolver_error_ir) : added

	* src/evolver.c (igraph_evolver_il, igraph_evolver_mes_il)
	(igraph_evolver_st_il, igraph_evolver_error_il) : added


2007-04-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector_pmt.hc (igraph_vector_init_real)
	(igraph_vector_init_real_end) : va_arg type corrected to be 
	self-promoting

	* src/types.h
	* src/vector.c
	* src/igraph_pmt.h
	* src/igraph_pmt_off.h
	* src/vector.h